# midi-sampler-to-m8

./: .gitignore  Cargo.toml  LICENSE  README.md  sfz-manifest.tsv
scripts/: batch-render-sfz.sh
src/: audio.rs  chords.rs  cli.rs  config.rs  devices.rs  main.rs  notes.rs  output.rs  render.rs  render_sfz.rs  sfz.rs  wav.rs
tests/: cli.rs
