[package]
name = "midi-sampler-to-m8"
version = "0.1.0"
edition = "2024"
description = "MIDI auto-sampler that assembles Dirtywave M8 fixed-slice sample-chain WAVs"
authors = ["Leon Dewey"]
repository = "https://github.com/leondewey/midi-sampler-to-m8"
license = "MIT"
readme = "README.md"
keywords = ["midi", "sampler", "m8", "dirtywave", "audio"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
cpal = "0.18.1"
csv = "1.4.0"
ctrlc = "3.5.2"
hound = "3.5.1"
midir = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
